examples/test/testpolicy18340.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18340
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key15: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value20
          key16: value8
      podSelector:
        matchLabels:
          key49: value18
          key8: value39
